Cleaned up spacing.

--- a/dev-resources/public/index_old.html
+++ b/dev-resources/public/index_old.html
@@ -12,6 +12,6 @@
     <div id="test">
         <h1>ClojureScript</h1>
     </div>
-    <script src="js/clj_dashboard_frontend.js"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
